fixed other spacing issz

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -141,13 +141,14 @@ video {
   opacity: 0.85;
 }
 h3 {
-  font-size: 1.7em;
+  font-size: 1.9em;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
   color: lightgray;
   font-weight:800;
   text-align: center;
   flex-wrap: nowrap;
+  margin-bottom: 0.75%;
 }
 
 p {
@@ -177,7 +178,7 @@ li {
 
   font-weight: 600;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  padding: 0.5%;
+  padding: 0.35%;
   font-size: 1.3em;
   display: flex;
   justify-content: center;
@@ -213,6 +214,7 @@ h2 {
   text-shadow: 4%;
   font-size: 1.5em;
   text-shadow: 1px 0.5px black;
+  margin-top: 0.5%;
 }
 
 
@@ -222,7 +224,7 @@ h4 {
     "Lucida Sans", Arial, sans-serif;
   color: darkcyan;
   font-weight: 900;
-  margin-bottom: 5%;
+  margin-bottom: 6%;
 }
 
 #images {
